Improve task controller.